# emailmessage-rs

./: .travis.yml  Cargo.toml  README.md  appveyor.yml
examples/: format_mime.rs  format_multipart.rs  format_stream.rs  format_stream_multipart.rs  format_string.rs
src/: encoder.rs  lib.rs  mailbox.rs  message.rs  mimebody.rs  utf8_b.rs
src/header/: content.rs  mailbox.rs  mod.rs  special.rs  textual.rs
src/mailbox/: check.rs  mod.rs  serde.rs  types.rs
