[package]
name = "emailmessage"
version = "0.1.0"
authors = ["Kayo Phoenix <kayo@illumium.org>"]
description = "Email Message library for Rust"
homepage = "https://github.com/katyo/emailmessage-rs"
repository = "https://github.com/katyo/emailmessage-rs.git"
readme = "README.md"
keywords = ["email", "message", "mime", "multipart", "format"]
categories = ["email", "encoding", "data-structures", "parsing", "value-formatting"]
license = "MIT"

[badges]
travis-ci = { repository = "katyo/emailmessage-rs", branch = "master" }

[dependencies]
emailaddress = "^0.4"
time = "^0.1"
base64 = "^0.9"
quoted_printable = "^0.4"
hyper = "^0.11"
mime = "^0.3"
textnonce = "^0.6"
futures = "^0.1"
tokio-proto = "^0.1"

[dev-dependencies]
tokio-core = "^0.1"
