[package]
name = "emailmessage"
version = "0.2.0"
authors = ["Kayo <kayo@illumium.org>"]
description = "Email Message library for Rust"
homepage = "https://github.com/katyo/emailmessage-rs"
repository = "https://github.com/katyo/emailmessage-rs.git"
readme = "README.md"
keywords = ["email", "message", "mime", "multipart", "format"]
categories = ["email", "encoding", "data-structures", "value-formatting", "asynchronous"]
license = "MIT"

[badges]
travis-ci = { repository = "katyo/emailmessage-rs", branch = "master" }
appveyor = { repository = "katyo/emailmessage-rs", branch = "master" }

[dependencies]
bytes = "^0.4"
emailaddress = "^0.4"
time = "^0.1"
base64 = "^0.10"
quoted_printable = "^0.4"
hyperx = "^0.13"
hyper = "^0.12"
mime = "^0.3"
textnonce = "^0.6"
futures = "^0.1"

[dev-dependencies]
tokio = "^0.1"
